--- a/actividad-semana-1/modulo_1_conceptos_basicos.ipynb
+++ b/actividad-semana-1/modulo_1_conceptos_basicos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrjGpcxdEM3Vqh0dwM4OgA",
+      "authorship_tag": "ABX9TyO+uqcqKigjbZPlATBKfmCQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,13 +46,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FcTHvM7Y9s9d",
-        "outputId": "9b62604d-5a3b-4525-87f9-1e2a3e41b88d"
+        "outputId": "e9abac2e-d4f4-4f33-cfab-c66e772337d1"
       },
       "outputs": [
         {
@@ -64,18 +64,82 @@
         }
       ],
       "source": [
-        "#Tu primer programa#\n",
+        "#Tu primer programa\n",
         "print(\"Hola Mundo\")"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Tipos de datos**\n"
+        "**Algunos Tipos de datos**\n",
+        "\n",
+        "* Enteros\n",
+        "* Flotante\n",
+        "* Booleanos\n",
+        "* Cadenas de texto\n"
       ],
       "metadata": {
         "id": "z7GNjX9fEYHV"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Algunos tipos de datos\n",
+        "int(1)\n",
+        "int(1.1) #Muestra el número 1 \n",
+        "float(15.23)\n",
+        "bool(1)\n",
+        "str(\"Hola Mundo\")\n",
+        "\n",
+        "#print(int(\"A\")) Error, el parametro recibido debe ser un número\n",
+        "print(\"Tipos de datos: \", type(1), type(15.23), type(True), type(\"Hola Mundo\"))\n",
+        "print(\"Entero: \", int(1))\n",
+        "print(\"Flotante: \", float(15.23))\n",
+        "print(\"Booleano: \", bool(1))\n",
+        "print(\"Cadena de texto: \", str(\"Hola Mundo\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U3AEZfsGG2sL",
+        "outputId": "f0bb3321-730a-4a87-f24e-7890f0f8c96e"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Tipos de datos:  <class 'int'> <class 'float'> <class 'bool'> <class 'str'>\n",
+            "Entero:  1\n",
+            "Flotante:  15.23\n",
+            "Booleano:  True\n",
+            "Cadena de texto:  Hola Mundo\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Expresiones y variables**\n",
+        "\n",
+        "Las expresiones son operaciones que realiza Python. Por ejemplo operaciones aritméticas básicas como sumas, restas, etc."
+      ],
+      "metadata": {
+        "id": "KDq4Zs7vNlqZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "eLA6vpP_NyFn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
