--- a/actividad-semana-1/modulo_1_conceptos_basicos.ipynb
+++ b/actividad-semana-1/modulo_1_conceptos_basicos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO+uqcqKigjbZPlATBKfmCQ",
+      "authorship_tag": "ABX9TyPPTFDgg7Y+bP9P9uBT3pGM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,7 +106,7 @@
         "id": "U3AEZfsGG2sL",
         "outputId": "f0bb3321-730a-4a87-f24e-7890f0f8c96e"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,9 @@
       "source": [
         "**Expresiones y variables**\n",
         "\n",
-        "Las expresiones son operaciones que realiza Python. Por ejemplo operaciones aritméticas básicas como sumas, restas, etc."
+        "Las expresiones son operaciones que realiza Python. Por ejemplo operaciones aritméticas básicas como sumas, restas, etc.\n",
+        "\n",
+        "Las variables son usadas para almacenar valores"
       ],
       "metadata": {
         "id": "KDq4Zs7vNlqZ"
@@ -134,12 +136,152 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "my_variable=\"Mi variable horas_laborales_x_dia contiene: \"\n",
+        "horas_laborales_x_dia=8\n",
+        "dias_laborales=5\n",
+        "producto=dias_laborales*horas_laborales_x_dia\n",
+        "\n",
+        "print(my_variable, horas_laborales_x_dia, \" y mi variable dias_laborales contiene: \",dias_laborales)\n",
+        "print(\"El número de horas trabajadas en la semana es de: \",producto)\n",
+        "print(\"Este resultado se obtiene del producto entre horas_laborales_x_dia por dias_laborales.\")\n",
+        "\n",
+        "#Algunas expresiones y operaciones mátematicas\n",
+        "sum = 10 + 10\n",
+        "res = 10 - 10\n",
+        "mul = 10 * 10\n",
+        "div = 10 / 3\n",
+        "div_int = 10 // 3 #La doble barra arroja el resultado en tipo de dato entero \n",
+        "print(sum,\", \",res,\", \",mul,\", \",div,\", \",div_int)"
+      ],
       "metadata": {
-        "id": "eLA6vpP_NyFn"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eLA6vpP_NyFn",
+        "outputId": "12be058b-088b-402e-a8b9-ea442d51d24b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mi variable horas_laborales_x_dia contiene:  8  y mi variable dias_laborales contiene:  5\n",
+            "El número de horas trabajadas en la semana es de:  40\n",
+            "Este resultado se obtiene del producto entre horas_laborales_x_dia por dias_laborales.\n",
+            "20 ,  0 ,  100 ,  3.3333333333333335 ,  3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Operaciones con cadenas**\n",
+        "\n",
+        "En Python, una cadena es una secuencia de caracteres. Una cadena está contenida entre dos comillas.\n",
+        "\n",
+        "**Tips**\n",
+        "* Es útil pensar en la cadena como una lista o una tupla.\n",
+        "* Podemos tratar la cadena como una secuencia y realizar operaciones de secuencia.\n",
+        "* Las cadenas son inmutables.\n",
+        "* Las barras invertidas \"\\\\\" representan el comienzo de las secuencias de escape.Las secuencias de escape representan cadenas que pueden ser difíciles de ingresar. Por ejemplo, las barras invertidas \"\\\\n\" representan una nueva línea. La salida viene dada por una nueva línea después de encontrar las barras invertidas \"\\\\n\". De manera similar, la barra invertida \"\\\\t\" representa una pestaña.\n",
+        "* Si se utiliza una barra invertida doble \"\\\\\\\\\". El resultado es una barra invertida después del escape.\n",
+        "\n",
+        "**Metodos**\n",
+        "* Las cadenas son secuencias y, como tales, se aplican métodos que funcionan en listas y tuplas. Las cadenas también tienen un segundo conjunto de métodos."
+      ],
+      "metadata": {
+        "id": "vhObSHUXVs-A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Name = \"Michael Jackson\"\n",
+        "#No. Elementos  1 2 3 4 5 6 7 8 9  10 11 12 13 14 15\n",
+        "#               M i c h a e l   J  a  c  k  s  o  n \n",
+        "#[indices]      0 1 2 3 4 5 6 7 8  9  10 11 12 13 14\n",
+        "\n",
+        "#Name [0] = \"J\" #Esta asignación no es posible\n",
+        "#Name[9:11] Muestra los carácteres desde la posición 9 y cuenta 11 elementos desde el primer elemento de la cadena.\n",
+        "print(\"Caracteres: \", Name[9:11]) \n",
+        "Concatenar = \"Fue un gran artista\"\n",
+        "\n",
+        "print(\"Muestra todo el contenido de la cadena: \",Name,\"\\n Muestra el contenido de la posición 0: \",Name[0]\n",
+        "      ,\"\\nMuestra el contenido de las posiciones 0 a la 3 (Rebanar):\", Name[0:3]\n",
+        "      ,\"\\nAl finalizar el conteo de la cadena inicia nuevamente desde la posición 0 con el número de posición -15:\", Name[-15]\n",
+        "      ,\"\\nLa posición -1 es la posición del último caracter de la cadena: \", Name[-1]\n",
+        "      ,\"\\nTambién podemos ingresar un valor de zancada de la siguiente manera. El 2 indica que seleccionamos cada segunda variable.: \", Name[::2]\n",
+        "      ,\"\\nTambién podemos incorporar rebanar. En este caso. devolvemos cada segundo valor: \", Name[0:5:2]\n",
+        "      ,\"\\nContar carácateres: \", len(Name)\n",
+        "      ,\"\\nConcatenar: \", (Name + \" \" + Concatenar)\n",
+        "      ,\"\\nMultiplicar la cadena 3 veces: \", (Name * 3)\n",
+        "      ,\"\\nCadena de escape - Salto de línea (\\\\n): \", (Name[0:7] + \"\\n\" + Name[8:17])\n",
+        "      ,\"\\nCadena de escape - Tabluador (\\\\t): \", (Name + \"\\t\" + Concatenar) \n",
+        "      )\n",
+        "print(r\"Lína de escape \\n es un salto de línea.\")#Cuando se incluye la r antes del texto, es cómo si se incluyera el doble backslash.\n",
+        "\n",
+        "#Metodos para las cadenas\n",
+        "A = \"Michael Jackson es el mejor\"\n",
+        "B = A.upper();#Metodo upper: cambia a mayuscula una cadena de texto\n",
+        "print(\"\\nAlgunos Metodos para las Cadenas:\\n\",A, \"\\n\", B)\n",
+        "B = A.replace (\"Michael\", \"Janet\")#Metodo replace: cambia un texto por otro\n",
+        "print(\"\\n\",A, \"\\n\", B)\n",
+        "#El método find, encuentra subcadenas. El argumento es la subcadena que le gustaría encontrar. La salida es el primer índice de la secuencia.\n",
+        "C = Name.find(\"el\")\n",
+        "print(\"\\n\",C)\n",
+        "\n",
+        "Numbers = \"0123456\"\n",
+        "print(\"\\n\",Numbers[::2])\n",
+        "name = 'Lizz'\n",
+        "print(\"\\n\",name[0:2])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FUpTH5KTV7cb",
+        "outputId": "8d87429e-809c-4ffe-9c65-6142ee1f93a1"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Caracteres:  ac\n",
+            "Muestra todo el contenido de la cadena:  Michael Jackson \n",
+            " Muestra el contenido de la posición 0:  M \n",
+            "Muestra el contenido de las posiciones 0 a la 3 (Rebanar): Mic \n",
+            "Al finalizar el conteo de la cadena inicia nuevamente desde la posición 0 con el número de posición -15: M \n",
+            "La posición -1 es la posición del último caracter de la cadena:  n \n",
+            "También podemos ingresar un valor de zancada de la siguiente manera. El 2 indica que seleccionamos cada segunda variable.:  McalJcsn \n",
+            "También podemos incorporar rebanar. En este caso. devolvemos cada segundo valor:  Mca \n",
+            "Contar carácateres:  15 \n",
+            "Concatenar:  Michael Jackson Fue un gran artista \n",
+            "Multiplicar la cadena 3 veces:  Michael JacksonMichael JacksonMichael Jackson \n",
+            "Cadena de escape - Salto de línea (\\n):  Michael\n",
+            "Jackson \n",
+            "Cadena de escape - Tabluador (\\t):  Michael Jackson\tFue un gran artista\n",
+            "Lína de escape \\n es un salto de línea.\n",
+            "\n",
+            "Algunos Metodos para las Cadenas:\n",
+            " Michael Jackson es el mejor \n",
+            " MICHAEL JACKSON ES EL MEJOR\n",
+            "\n",
+            " Michael Jackson es el mejor \n",
+            " Janet Jackson es el mejor\n",
+            "\n",
+            " 5\n",
+            "\n",
+            " 0246\n",
+            "\n",
+            " Li\n"
+          ]
+        }
+      ]
     }
   ]
 }
