--- a/actividad-semana-1/modulo_3_fundamentos_programacion.ipynb
+++ b/actividad-semana-1/modulo_3_fundamentos_programacion.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPK81qxiqYjCQAxUS6qhNqM",
+      "authorship_tag": "ABX9TyOuceXGnY5zGRkkesV/4Hgw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -271,16 +271,24 @@
         "asociados con una clase El objeto que le interesa se pasa como argumento. El\n",
         "valor de retorno es una lista de ese objeto.\n",
         "\"\"\"\n",
-        "print(dir(CirculoRojo))"
+        "print(dir(CirculoRojo))\n",
+        "\n",
+        "A = ['1','2','3']\n",
+        "for a in A: print(2*a)\n",
+        "\n",
+        "x=1\n",
+        "if(x!=1): print('Hello')\n",
+        "else: print('Hi')\n",
+        "print('Mike')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pcKNfJ0Xiqzc",
-        "outputId": "96f6a3f7-6e2b-4c59-9df1-1cb0d44e38e8"
+        "outputId": "641aaae6-1647-4dee-961e-9e6131b13db1"
       },
-      "execution_count": 78,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +296,12 @@
           "text": [
             "Atributos del objeto:  10  -  rojo\n",
             "Nuevos atributos del objeto:  30  -  rojo\n",
-            "['AdicionarRadio', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'color', 'radio']\n"
+            "['AdicionarRadio', '__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__eq__', '__format__', '__ge__', '__getattribute__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', 'color', 'radio']\n",
+            "11\n",
+            "22\n",
+            "33\n",
+            "Hi\n",
+            "Mike\n"
           ]
         }
       ]
