--- a/actividad-semana-1/modulo_2_estructuras_datos.ipynb
+++ b/actividad-semana-1/modulo_2_estructuras_datos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVOEX3jz0JnSz+Ex1gntC6",
+      "authorship_tag": "ABX9TyPSdxAe7fuRhpZD82wEVyBN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,6 +30,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Carlos Julio León Caicedo - No. de matricula: A01793947**\n",
+        "\n",
         "**Módulo 2 - Estructuras de datos de Python** \n",
         "\n",
         "**Objetivos de aprendizaje**\n",
@@ -131,7 +133,7 @@
         "id": "U3AEZfsGG2sL",
         "outputId": "5e74b803-6747-4d38-d9b3-9427c2c34989"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +179,7 @@
         "id": "eLA6vpP_NyFn",
         "outputId": "4880d5a3-8492-4da7-cf46-1de6a3e1d11f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
