--- a/ejercicios-prácticos/TPS_Dia_3_Machine_Learning.ipynb
+++ b/ejercicios-prácticos/TPS_Dia_3_Machine_Learning.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TPS_Dia_2_Machine_Learning.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,8 +19,20 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "# TU PRIMERA SEMANA COMO DATA SCIENTIST (POR DS4B)"
+        "<a href=\"https://colab.research.google.com/github/PosgradoMNA/actividades-de-aprendizaje-ingcarlosleon/blob/main/ejercicios-pr%C3%A1cticos/TPS_Dia_3_Machine_Learning.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# TU PRIMERA SEMANA COMO DATA SCIENTIST (POR DS4B)\n",
+        "\n",
+        "Este archivo se toma del curso https://cognitiveclass.ai/courses/python-for-data-science"
       ],
       "metadata": {
         "id": "ng-TR6qGrO13"
