--- a/ejercicios-prácticos/TPS_Dia_3_Machine_Learning.ipynb
+++ b/ejercicios-prácticos/TPS_Dia_3_Machine_Learning.ipynb
@@ -96,6 +96,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# ruta relativa de los datos almacenados en Google Drive, para pruebas.\n",
         "df = pd.read_csv('/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/AbandonoEmpleados.csv', sep = ';', index_col= 'id', na_values='#N/D')"
       ],
       "metadata": {
