--- a/actividad-semana-2/modulo_4_trabajo_con_datos.ipynb
+++ b/actividad-semana-2/modulo_4_trabajo_con_datos.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj4R80OPfBnpSD/dL+AlQo",
+      "mount_file_id": "1i4Y7eRAjy0gIjvlvsGJA8-DGfW5TVBu4",
+      "authorship_tag": "ABX9TyM5WzWAYruT51k7ueIz2nGl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,26 +28,92 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Carlos Julio León Caicedo - No. de matricula: A01793947**\n",
+        "\n",
+        "**Módulo 4 - Trabajar con datos en Python**\n",
+        "\n",
+        "En esta lección se aprenderá sobre:\n",
+        "\n",
+        "*   Lectura de archivos con abierto\n",
+        "*   Escribir archivos con abierto\n",
+        "*   Cargando datos con Pandas\n",
+        "*   Trabajar y guardar datos con Pandas"
+      ],
+      "metadata": {
+        "id": "Vta_2Td1hUrG"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 260
         },
         "id": "UJvKT_m6TUBs",
-        "outputId": "41bd40ec-7a49-45c1-d693-29d0ba18070b"
+        "outputId": "195117bb-a3a8-4348-97ad-eeeda8d05534"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Hola Mundo\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-3-3f3262235556>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Read the Example1.txt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mexample1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mfile1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexample1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt'"
           ]
         }
       ],
       "source": [
-        "print(\"Hola Mundo\")"
+        "from google.colab import drive # montar Google Drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# Read the Example1.txt\n",
+        "example1 = \"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt\"\n",
+        "file1 = open(example1, \"r\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Read the Example1.txt\n",
+        "example1 = \"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/Example1.txt\"\n",
+        "file1 = open(example1, \"r\")"
+      ],
+      "metadata": {
+        "id": "YNRr7RJonNkS",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 224
+        },
+        "outputId": "a006f44e-cd2e-47be-d862-5eebca81d195"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-b1e1bb35c471>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Read the Example1.txt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mexample1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/Example1.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfile1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexample1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/Example1.txt'"
+          ]
+        }
       ]
     }
   ]
