--- a/actividad-semana-2/modulo_4_trabajo_con_datos.ipynb
+++ b/actividad-semana-2/modulo_4_trabajo_con_datos.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1i4Y7eRAjy0gIjvlvsGJA8-DGfW5TVBu4",
-      "authorship_tag": "ABX9TyM5WzWAYruT51k7ueIz2nGl",
+      "authorship_tag": "ABX9TyNHwaKBlmW6Q6Muu14WjIP1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,15 +46,25 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Leyendo archivos con Python**\n",
+        "\n",
+        "El archivo **Example1.txt** se almacenó en la ruta relativa de mi usuario en Google Colab y se ejecutó perfectamente como se evidencia en el siguiente pantallazo."
+      ],
+      "metadata": {
+        "id": "k8noS9DDp28S"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 11,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 260
+          "base_uri": "https://localhost:8080/"
         },
         "id": "UJvKT_m6TUBs",
-        "outputId": "195117bb-a3a8-4348-97ad-eeeda8d05534"
+        "outputId": "314226c5-6c50-47cb-9802-736822742eb3"
       },
       "outputs": [
         {
@@ -63,58 +73,153 @@
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
-        },
-        {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-3f3262235556>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Read the Example1.txt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mexample1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mfile1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexample1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt'"
-          ]
         }
       ],
       "source": [
         "from google.colab import drive # montar Google Drive\n",
         "drive.mount('/content/drive')\n",
         "\n",
-        "# Read the Example1.txt\n",
+        "# Read the Example1.txt, este archivo se almaeceno en la ruta relativa de mi usuario en Google Colab\n",
         "example1 = \"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt\"\n",
-        "file1 = open(example1, \"r\")\n"
+        "file1 = open(example1, \"r\")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Print the path of file\n",
         "\n",
-        "# Read the Example1.txt\n",
-        "example1 = \"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/Example1.txt\"\n",
-        "file1 = open(example1, \"r\")"
+        "file1.name"
       ],
       "metadata": {
-        "id": "YNRr7RJonNkS",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 224
+          "height": 36
         },
-        "outputId": "a006f44e-cd2e-47be-d862-5eebca81d195"
+        "id": "GXRnFQfjpBwu",
+        "outputId": "b59045b8-c34e-422d-a78e-31f0b5a8eadd"
       },
-      "execution_count": 1,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "FileNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-b1e1bb35c471>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Read the Example1.txt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mexample1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/Example1.txt\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mfile1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexample1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"r\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/ejercicios-prácticos/Example1.txt'"
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/content/drive/MyDrive/Colab Notebooks/1. Curso ciencia y analítica/actividad 2 - trabajo con datos/Example1.txt'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the mode of file, either 'r' or 'w'\n",
+        "\n",
+        "file1.mode"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "9S7X3jw6pG01",
+        "outputId": "e0f074dc-4b17-416b-e19a-8145c5ba7ce6"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'r'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Read the file\n",
+        "\n",
+        "FileContent = file1.read()\n",
+        "FileContent"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "UybJUx2ppKAe",
+        "outputId": "0a456bf5-8754-44ad-efe1-9fc40804ffd1"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'This is line 1 \\nThis is line 2\\nThis is line 3'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print the file with '\\n' as a new line\n",
+        "\n",
+        "print(FileContent)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4R2uE7u-pRLh",
+        "outputId": "afd4df23-4815-45a7-8fbb-808b3fd3355a"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "This is line 1 \n",
+            "This is line 2\n",
+            "This is line 3\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Close file after finish\n",
+        "\n",
+        "file1.close()"
+      ],
+      "metadata": {
+        "id": "OUOdM4NipUqm"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
